--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,3 +1,12 @@
+@font-face {
+  font-family: 'boogaloo';
+  src: url("../assets/fonts/boogaloo/boogaloo-regular-webfont.woff2") format("woff2"), url("../assets/fonts/boogaloo/boogaloo-regular-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal; }
+
+body {
+  font-family: 'boogaloo'; }
+
 html, body {
   margin: 0;
   padding: 0;
